<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/client_setting_text"
            android:textColor="#000000"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11sp" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/host_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/hostEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/host_text"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/port_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/portEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/port_text"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/name_text"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11sp" />

        <Button
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_setting_text"
            android:textColor="#000000"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/room_name_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/roomNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/room_name_text"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/port_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/serverPortEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/port_text"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </TableRow>

        </TableLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="11sp" />

        <Button
            android:id="@+id/createServerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_server_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>